tests/baselines/reference/importAssertionNonstring.errors.txt
tests/cases/compiler/mod.mts(1,52): error TS2837: Import assertion values must be string literal expressions.
tests/cases/compiler/mod.mts(3,52): error TS2837: Import assertion values must be string literal expressions.
tests/cases/compiler/mod.mts(5,52): error TS2837: Import assertion values must be string literal expressions.
tests/cases/compiler/mod.mts(7,52): error TS2837: Import assertion values must be string literal expressions.
tests/cases/compiler/mod.mts(9,52): error TS2837: Import assertion values must be string literal expressions.
tests/cases/compiler/mod.mts(11,66): error TS2837: Import assertion values must be string literal expressions.


==== tests/cases/compiler/mod.mts (6 errors) ====
    import * as thing1 from "./mod.mjs" assert {field: 0};
                                                       ~
!!! error TS2837: Import assertion values must be string literal expressions.
    
    import * as thing2 from "./mod.mjs" assert {field: `a`};
                                                       ~~~
!!! error TS2837: Import assertion values must be string literal expressions.
    
    import * as thing3 from "./mod.mjs" assert {field: /a/g};
                                                       ~~~~
!!! error TS2837: Import assertion values must be string literal expressions.
    
    import * as thing4 from "./mod.mjs" assert {field: ["a"]};
                                                       ~~~~~
!!! error TS2837: Import assertion values must be string literal expressions.
    
    import * as thing5 from "./mod.mjs" assert {field: { a: 0 }};
                                                       ~~~~~~~~
!!! error TS2837: Import assertion values must be string literal expressions.
    
    import * as thing6 from "./mod.mjs" assert {type: "json", field: 0..toString()}
                                                                     ~~~~~~~~~~~~~
!!! error TS2837: Import assertion values must be string literal expressions.